[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/circle.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/normal.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/scripts/Point.gd" type="Script" id=3]

[node name="Point" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0
margin_right = -32.0
margin_bottom = -32.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpacityTween" type="Tween" parent="."]
[connection signal="gui_input" from="Label" to="." method="_on_Label_gui_input"]
[connection signal="mouse_entered" from="Label" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Label" to="." method="_on_mouse_exited"]
